# chromium-bridge

./: .copier-answers.yml  .editorconfig  .gitattributes  .gitignore  .prototools  .repo-platform.yml  .shellcheckrc  .typography-allow  .yamllint  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  Makefile  README.md  README.zh_CN.md  README.zh_TW.md  SECURITY.md  biome.json  clippy.toml  deny.toml  install.sh  justfile  lefthook.yml  moon.yml  package.json  release-please-config.json  tsconfig.base.json  typos.toml  zcode-mcp-config.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  settings.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  security-change.yml
.github/scripts/: fuzz_smoke.ts
.github/workflows/: audits.yml  auto-assign.yml  ci.yml  codeql.yml  deploy-site.yml  fuzz.yml  nightly.yml  pr-title.yml  release-please.yml  release.yml  sbom.yml  security.yml  template-sync.yml
.moon/: workspace.yml
.moon/tasks/: all.yml
contracts/: README.md  bridge-request.schema.json  bridge-response.schema.json  capabilities.json  errors.json  identity.json  tools.json
crates/core/: Cargo.toml
crates/core/src/: allowlist.rs  broker.rs  cli.rs  enclave.rs  error.rs  ipc.rs  lib.rs  mcp_server.rs  native_host.rs  protocol.rs  revocation.rs  session.rs
crates/core/src/enclave/: cli.rs  config.rs  der.rs  encoding.rs  mod.rs
crates/core/src/ipc/: attest.rs  handshake.rs  lockfile.rs  mod.rs  peercred.rs  socket.rs
crates/core/src/ipc/platform/: linux.rs  macos.rs  mod.rs
crates/core/src/tools/: catalogue.rs
docs/: README.md  architecture.md  chrome-web-store.md  cli.md  compatibility.md  desktop-app.md  development.md  governance-roadmap.md  operations.md  privacy-policy.md  privacy-policy.zh_CN.md  privacy-policy.zh_TW.md  quickstart.md  quickstart.zh_CN.md  quickstart.zh_TW.md  release.md  requirements.md  wsl.md
docs/adr/: 0001-use-rust-single-binary.md  0002-three-process-architecture-localhost-tcp.md  0003-content-script-snapshot-vs-chrome-debugger.md  0004-allowlist-with-optional-host-permissions.md  0005-page-eval-disabled-by-default.md  0006-toast-confirmation-for-high-risk.md  0007-mcp-protocol-version-2025-06-18.md  0008-page-eval-confirmation-channel.md  0009-page-snapshot-precise-debugger.md  0010-cookie-storage-readonly.md  0011-options-page-for-settings.md  0012-typescript-esbuild-extension-build.md  0013-ci-and-toolchain.md  0014-leveled-logging.md  0015-windows-support.md  0016-linux-wsl-support.md  0017-cdp-mode-all-ops.md  0018-tab-workspace-group.md  0019-authenticated-ipc.md  0020-kernel-attested-peer-identity.md  0021-enrollment-ceremony.md  0022-multi-browser-label-routing.md  0023-workspace-monorepo-tauri-app.md  0024-multi-client-attested-pairing-and-broker.md  0025-any-side-revocation-epoch.md  0026-tauri-signing-and-entitlement-chain.md  0027-extension-rehaul-off-dom-confirmation-wxt-i18n.md  0028-contracts-dissolved-into-rust-core.md  0029-desktop-app-management-surface.md  0030-global-kill-switch-and-audit.md  0031-touch-id-confirmations-and-presence-grants.md  0032-host-owned-policy-settings.md
docs/rfc/: 0001-connection-state-machine.md  0002-tool-registry.md
docs/security/: enrollment-manual-test.md  incident-response.md  threat-model.md  tool-risk-matrix.md  (+1 more)
extension/: background.js  build.mjs  build.ts  content.js  manifest.json  options.html  package-lock.json  package.json  popup.html  popup.js  toast.css  tsconfig.json  wxt.config.ts
fuzz/: Cargo.toml
install/: install.ps1  install.sh  mcp-config.example.json
scripts/: build-repro.sh  build-repro.ts  check-all-green.test.ts  check-all-green.ts  check-cjk.ts  check-commit-names.test.ts  check-commit-names.ts  check-desktop-signing.ts  check-envelope-parity.ts  check-extension-id.mjs  check-extension-id.ts  check-moon-hasher.ts  check-toolchain.ts  check-typography.test.ts  check-typography.ts  check-version.sh  check-version.ts  desktop-bundle.ts  dev-browser.ts  dev.ts  dmg-dsstore.ts  fuzz-smoke.ts  fuzz_smoke.sh  fuzz_smoke.ts  gen-dmg-background.ts  gen-envelope.test.ts  gen-envelope.ts  gen-icons.ts  gen-ops.mjs  gen-ops.ts  help.ts  install_verify_test.sh  lib.sh  lib.ts  package.json  provisioning.ts  sync-version.sh  sync-version.ts  tsconfig.json  web-ext-run.d.ts
src/: cli.rs  doctor.rs  enclave.rs  error.rs  ipc.rs  lib.rs  main.rs  mcp_server.rs  native_host.rs  protocol.rs  session.rs  tools.rs
src/apps/desktop/: Cargo.toml  tauri.conf.json
src/apps/desktop/capabilities/: default.json
src/apps/desktop/entitlements/: app.entitlements  host.entitlements
src/apps/desktop/host-bundle/: Info.plist
src/apps/desktop/icons/: icon.icns
src/apps/desktop/src/: cli_tool.rs  clients.rs  host.rs  killswitch.rs  main.rs  presence_seam.rs  registration_cmds.rs  status.rs  ts_export.rs
src/apps/desktop/ui/: index.html  main.js  moon.yml  package.json  tsconfig.json  vite.config.ts
src/apps/desktop/ui/src/: App.tsx  main.tsx  store.ts  styles.css
src/apps/desktop/ui/src/components/: LanguagePicker.tsx
src/apps/desktop/ui/src/components/ui/: bits.tsx  button.tsx  confirm-dialog.tsx  select.tsx
src/apps/desktop/ui/src/hooks/: useAsync.ts  useI18n.ts
src/apps/desktop/ui/src/lib/: armed.ts  audit-correlate.ts  auth-label.ts  browser-action.ts  browser-names.ts  commands.gen.ts  fingerprint.ts  i18n.ts  native-language-names.ts  tauri.ts
src/apps/desktop/ui/src/locales/: en.ts  zh_CN.ts  zh_TW.ts
src/apps/desktop/ui/src/views/: AuditView.tsx  BrowsersView.tsx  ClientsView.tsx  OverviewView.tsx  PairingView.tsx  SecurityView.tsx  SetupView.tsx
src/apps/desktop/ui/tests/: audit-correlate.test.ts  browser-action.test.ts  fingerprint.test.ts  i18n.test.ts
src/apps/host/: Cargo.toml
src/apps/host/src/: main.rs
supply-chain/: config.toml
tests/: README.md  adversarial.py  chaos.py  dom_test.ts  e2e.py  ext_test.js  ext_test.ts  fuzz_smoke.sh  install_verify_test.sh  integration_e2e.ts  package-lock.json  package.json  run_all.sh  run_all.ts  security_browser_test.ts  tsconfig.json
(+264 files in other folders)
