[workspace]
resolver = "2"
members = ["src/packages/core", "src/apps/host", "src/apps/desktop"]
# Keep the default build/test/clippy surface pinned to the security core and
# the host binary. Future members (e.g. a Tauri app) must be added here only
# by an explicit decision, so `cargo test` stays the gate for the core.
# The Tauri desktop shell (src/apps/desktop) is a member but deliberately NOT
# a default member: build it explicitly via `just desktop-bundle` or
# `cargo build -p chromium-bridge-desktop`.
default-members = ["src/packages/core", "src/apps/host"]
# `src/packages/core/fuzz/` is its own (nightly + libFuzzer) workspace; keep it
# out of the main build/test graph so a stable `cargo` build never tries to
# compile it.
exclude = ["src/packages/core/fuzz"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
hmac = "0.13"
libc = "0.2.186"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = { version = "0.11", default-features = false }
thiserror = "2.0.18"
# Property-based testing for the protocol parsing boundary. Kept lean
# (no `fork`/`timeout`/`regex-syntax` features) so it spawns no processes and
# its dependency tree stays within the licenses allowed by `deny.toml`.
proptest = { version = "1", default-features = false, features = ["std"] }
# Secure Enclave enrollment key (src/packages/core/src/enclave.rs). The vetted
# wrapper crate is used instead of hand-rolled Security.framework FFI;
# OSX_10_15 is required for the data-protection keychain, the only keychain
# that can hold Secure Enclave keys. The -sys crate is a direct dependency
# only for the SecAccessControl flag constants the wrapper does not re-export,
# and core-foundation only for reading key attributes (token-id validation).
core-foundation = "0.10"
security-framework = { version = "3", features = ["OSX_10_15"] }
security-framework-sys = "2"
# HKCU native-messaging registration on Windows
# (src/packages/core/src/registration.rs). The vetted wrapper (rust-lang
# community, windows-sys underneath) instead of hand-rolled Advapi32 FFI.
winreg = "0.55"
# Schema derivation for the wire envelopes (ADR-0028): the emit_envelope_schema
# example (behind the core's `envelope-schema` feature) feeds the CI
# double-derivation diff against the extension's Zod validators. Excluded from
# default and release builds - the shipped binary never compiles schemars.
schemars = "1"
chromium-bridge-core = { path = "src/packages/core" }
# Tauri v2 desktop shell (src/apps/desktop only; never a dependency of the
# security core or the host). Policy per ADR-0023: the GUI layer carries no
# security weight, so the widely-audited framework is the right trust
# boundary there.
tauri = "2"
tauri-build = "2"

# codegen-units=1 and strip=symbols also serve reproducibility: one codegen
# unit removes parallel-codegen variance, and stripping drops the symbol/debug
# sections most likely to leak build-machine paths. Path remapping and
# SOURCE_DATE_EPOCH live in scripts/build-repro.sh (used by the release
# workflow), since they need the concrete checkout path at build time.
[profile.release]
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1
strip = "symbols"
