[package]
name = "chromium-bridge-core"
version.workspace = true
edition.workspace = true
description = "Chromium Bridge library: IPC, protocols, session, tools, enclave"
license.workspace = true

[dependencies]
hmac.workspace = true
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation.workspace = true
security-framework.workspace = true
security-framework-sys.workspace = true
