[package]
name = "chromium-bridge-desktop"
version.workspace = true
edition.workspace = true
description = "Chromium Bridge control panel - Tauri v2 desktop app (ADR-0029)"
license.workspace = true

[[bin]]
name = "chromium-bridge-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build.workspace = true

[dependencies]
chromium-bridge-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true

[lints]
workspace = true
